--- a/main.css
+++ b/main.css
@@ -3,28 +3,21 @@
     src: url(fonts/FuturaBQ-DemiBold.woff2)format('woff');
 }
 
-
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-   
-
 }
+
 body{
     overflow-x: hidden;
     background:  url(images/barangay.jpg);
     background-size: cover;
     min-height: 100%;
-    bottom: 20%;
-    box-sizing: border-box;
 }
-
-
 
 .sticky-header {
     position: fixed;
-    top: 0;
     width: 100%;
     height: 15%;
     background-color: #fff;
@@ -35,18 +28,12 @@ body{
     align-items: center;
 }
 
-.logo {
-    display: inline-block;
-    margin-right: 1rem;
-}
-
 .logo img {
+    display: inline-block;
     position: absolute;
-    top: 1%;
+    top: 0%;
     left: 3%;
-    width: 90px;
-    height: 90px;
-    opacity: 1;
+    height: 98%;
 }
 
 nav ul {
@@ -78,37 +65,24 @@ nav a:hover {
 
 .back-link {
     display: inline-block;
-    font-size: 1.2rem;
     text-decoration: none;
-    background: #909090;
-    padding: 0.5rem 1rem;
-    border: 1px solid #333;
-    border-radius: 50px;
     position: absolute;
-    top: 20%;
+    top: 21%;
     height: 50px;
-    width: 50px;
-    left: 5%;
+    left: 2%;
     transition: 0.20s;
+    font-weight: bold;
+    font-size: 150%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #FFFFFF;
+    -webkit-text-stroke: 1px black;
+    text-rendering: 1px black;
 }
 
 .back-link:hover {
+    color: #909090;
     transform: scale(1.1);
 }
-
-.back-icon {
-    display: inline-block;
-    font-size: 1.5rem;
-    margin-right: 0.5rem;
-}
-
-
-/*
-.imageclearance {
-    width: auto;
-    height: ;
-    opacity: 0.6;
-} */
 
 .imageid {
     width: 100%;
@@ -124,13 +98,6 @@ nav a:hover {
     position: absolute;
     left: 0;
     top: 0;
-
-
-}
-
-.container p {
-    opacity: 1;
-
 }
 
 .p-1 {
@@ -145,24 +112,7 @@ nav a:hover {
     line-height: 25px;
     display: flex;
     align-items: center;
-
 }
-/*
-.p-2 {
-    position: absolute;
-    width: 495px;
-    height: 150px;
-    left: 5%;
-    top: 60%;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 25px;
-    display: flex;
-    align-items: center;
-} */
-
 
 .h-1 {
     position: absolute;
@@ -176,23 +126,7 @@ nav a:hover {
     display: flex;
     align-items: center;
     color: black;
-
 }
-/*
-.h-2 {
-    position: absolute;
-    width: 569px;
-    height: 133px;
-    left: 54%;
-    top: 420px;
-    font-family: 'futura';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 40px;
-    display: flex;
-    align-items: center;
-} */
 
 .p-3 {
     position: absolute;
@@ -204,8 +138,6 @@ nav a:hover {
     line-height: 24px;
     display: flex;
     align-items: center;
-
-
 }
 
 button {
@@ -223,15 +155,12 @@ button {
     border: 0;
     transition: 0.30s;
     font-family: 'futura';
-
 }
 
 button:hover {
     transform: scale(1.1);
     color: black;
 }
-
-
 
 .request {
     position: absolute;
@@ -251,8 +180,6 @@ button:hover {
     position: absolute;
     left: 6%;
     top: 5%;
-
-
 }
 
 .request img {
@@ -402,10 +329,10 @@ button:hover {
     align-items: center;
     color: #000000;
     position: absolute;
-    top: 7%;
+    font-family: Arial, Helvetica, sans-serif;
+    top: 40px;
     left: 3%;
 }
-
 
 .infoid {
     font-family: 'Arial';
@@ -417,15 +344,13 @@ button:hover {
     align-items: center;
     color: #000000;
     position: absolute;
-    top: 8%;
+    top: 70px;
     left: 3%;
 } 
-
 
 .clearanceformBG{
     height: 1300px;
 }
-
 
 .clearanceform {
     position: absolute;
@@ -470,12 +395,11 @@ button:hover {
     width: 28%;
     height: 50px;
     left: 3%;
-    top: 20%;
+    top: 120px;
     background: rgba(204, 204, 204, 0.85);
     border: 0;
     border-radius: 10px;
     padding: 15px;
-
 }
 
 #firstname {
@@ -483,7 +407,7 @@ button:hover {
     width: 98px;
     height: 23px;
     left: 4%;
-    top: 15%;
+    top: 90px;
     font-family: 'Arial';
     font-style: normal;
     font-weight: 400;
@@ -499,7 +423,7 @@ button:hover {
     width: 25%;
     height: 50px;
     left: 32%;
-    top: 20%;
+    top: 120px;
     background: rgba(204, 204, 204, 0.85);
     border: 0;
     border-radius: 10px;
@@ -511,7 +435,7 @@ button:hover {
     width: 98px;
     height: 23px;
     left: 33%;
-    top: 15%;
+    top: 90px;
     font-family: 'Arial';
     font-style: normal;
     font-weight: 400;
@@ -527,7 +451,7 @@ button:hover {
     width: 25%;
     height: 50px;
     left: 58%;
-    top: 20%;
+    top: 120px;
     background: rgba(204, 204, 204, 0.85);
     border: 0;
     border-radius: 10px;
@@ -540,7 +464,7 @@ button:hover {
     width: 120px;
     height: 23px;
     left: 59%;
-    top: 15%;
+    top: 90px;
     font-family: 'Arial';
     font-style: normal;
     font-weight: 400;
@@ -556,7 +480,7 @@ button:hover {
     width: 13%;
     height: 50px;
     left: 84%;
-    top: 20%;
+    top: 120px;
     background: rgba(204, 204, 204, 0.85);
     border: 0;
     border-radius: 10px;
@@ -568,7 +492,7 @@ button:hover {
     width: 101px;
     height: 23px;
     left: 85%;
-    top: 15%;
+    top: 90px;
     font-family: 'Arial';
     font-style: normal;
     font-weight: 400;
@@ -610,7 +534,7 @@ button:hover {
     position: absolute;
     width: 130px;
     height: 23px;
-    left: 24%;
+    left: 25%;
     top: 190px;
     font-family: 'Arial';
     font-style: normal;
@@ -638,7 +562,7 @@ button:hover {
     position: absolute;
     width: 101px;
     height: 23px;
-    left: 54%;
+    left: 56%;
     top: 190px;
     font-family: 'Arial';
     font-style: normal;
@@ -648,7 +572,6 @@ button:hover {
     display: flex;
     align-items: center;
     color: #000000;
-
 }
 
 #civilstatus {
@@ -661,14 +584,13 @@ button:hover {
     border: 0;
     border-radius: 10px;
     padding: 15px;
-
 }
 
 #gender {
     position: absolute;
     width: 101px;
     height: 23px;
-    left: 79%;
+    left: 82%;
     top: 190px;
     font-family: 'Arial';
     font-style: normal;
@@ -682,22 +604,21 @@ button:hover {
 
 #sex {
     position: absolute;
-    width: 150px;
+    width: 16%;
     height: 50px;
-    left: 78%;
+    left: 81%;
     top: 220px;
     background: rgba(204, 204, 204, 0.85);
     border: 0;
     border-radius: 10px;
     padding: 15px;
-
 }
 
 #national {
     position: absolute;
-    width: 78px;
+    width: auto;
     height: 20px;
-    left: 43px;
+    left: 4%;
     top: 290px;
     font-family: 'Arial';
     font-style: normal;
@@ -710,9 +631,9 @@ button:hover {
 
 #Nationality {
     position: absolute;
-    width: 280px;
+    width: 25%;
     height: 50px;
-    left: 35px;
+    left: 3%;
     top: 320px;
     background: rgba(204, 204, 204, 0.85);
     border-radius: 10px;
@@ -724,7 +645,7 @@ button:hover {
     position: absolute;
     width: 78px;
     height: 20px;
-    left: 350px;
+    left: 41%;
     top: 290px;
     font-family: 'Arial';
     font-style: normal;
@@ -737,14 +658,41 @@ button:hover {
 
 #PWD {
     position: absolute;
-    width: 280px;
+    width: 15%;
     height: 50px;
-    left: 340px;
+    left: 40%;
     top: 320px;
     background: rgba(204, 204, 204, 0.85);
     border-radius: 10px;
     padding: 15px;
     border: 0;
+}
+
+#occup {
+    position: absolute;
+    width: 78px;
+    height: 20px;
+    left: 68%;
+    top: 290px;
+    font-family: 'Arial';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+}
+
+#Occupation {
+    position: absolute;
+    width: 30%;
+    height: 50px;
+    left: 67%;
+    top: 320px;
+    background: rgba(204, 204, 204, 0.85);
+    border-radius: 10px;
+    padding: 15px;
+    border: 0
 }
 
 #bdtype {
@@ -869,6 +817,7 @@ button:hover {
     line-height: 20px;
     display: flex;
     align-items: center;
+    padding: 15px;
 }
 
 #street {
@@ -881,7 +830,6 @@ button:hover {
     border-radius: 10px;
     padding: 15px;
     border: 0;
-
 }
 
 #txtbox1 {
@@ -913,7 +861,6 @@ button:hover {
     top: 64%;
     left: 4%;
     font-family: 'Arial';
-
 }
 
 textarea {
@@ -945,7 +892,6 @@ textarea {
 }
 
 #cancel {
-
     position: absolute;
     width: 199px;
     height: 54px;
@@ -960,7 +906,6 @@ textarea {
 
 #cancel:hover {
     background-color: #D35F5F;
-
 }
 
 #Submit {
@@ -978,7 +923,6 @@ textarea {
 
 #Submit:hover {
     background-color: #4BBA41;
-
 }
 
 #TIN {
@@ -1006,34 +950,6 @@ textarea {
     display: flex;
     align-items: center;
     font-family: 'Arial';
-
-}
-
-#occup {
-    position: absolute;
-    width: 78px;
-    height: 20px;
-    left: 690px;
-    top: 290px;
-    font-family: 'Arial';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 20px;
-    display: flex;
-    align-items: center;
-}
-
-#Occupation {
-    position: absolute;
-    width: 325px;
-    height: 50px;
-    left: 680px;
-    top: 320px;
-    background: rgba(204, 204, 204, 0.85);
-    border-radius: 10px;
-    padding: 15px;
-    border: 0
 }
 
 #occup2 {
@@ -1809,7 +1725,6 @@ textarea {
 
 #cancelid:hover {
     background-color: #D35F5F;
-
 }
 
 #submitid {
@@ -1827,7 +1742,6 @@ textarea {
 
 #submitid:hover {
     background-color: #4BBA41;
-
 }
 
 .certificatesched {
