--- a/css/style1.css
+++ b/css/style1.css
@@ -94,7 +94,7 @@
 
 .form-container form h3{
    font-size: 30px;
-   text-transform: uppercase;
+  /* text-transform: uppercase; */
    margin-bottom: 10px;
    color:#333;
 }
@@ -116,7 +116,7 @@
 .form-container form .form-btn{
    background: #fbd0d9;
    color:crimson;
-   text-transform: capitalize;
+ /*  text-transform: capitalize; */
    font-size: 20px;
    cursor: pointer;
 }
