--- a/css/style1.css
+++ b/css/style1.css
@@ -18,7 +18,7 @@
    box-sizing: border-box;
    outline: none; border:none;
    text-decoration: none;
-   text-transform: capitalize;
+ /*  text-transform: capitalize; */
 }
 .container{
    min-height: 100vh;
@@ -66,7 +66,7 @@
    background: #333;
    color:#fff;
    margin:0 5px;
-   text-transform: capitalize;
+ /*  text-transform: capitalize; */
 }
 
 .container .content .btn:hover{
