--- a/main.css
+++ b/main.css
@@ -280,6 +280,7 @@ nav a:hover {
     background: #FFFFFF;
     border-radius: 10px;
     text-decoration: none;
+    opacity: 0.9;
 }
 
 .CertificateList {
@@ -312,6 +313,7 @@ nav a:hover {
     bottom: 10%;
     background: #FFFFFF;
     border-radius: 10px;  
+    opacity: 0.9;
 }
 
 .clearanceform form {
@@ -331,11 +333,13 @@ nav a:hover {
     top: 20%;
     background: #FFFFFF;
     border-radius: 10px;
+    opacity: 0.9;
 }
 
 .clearanceformid form {
     position: relative;
     top: 3%;
+    opacity: 1;
 }
 
 .namerequest {
@@ -1852,4 +1856,57 @@ nav a:hover {
     position: absolute;
     top: 3%;
     left: 3%;
+}
+
+.sidebar {
+    width: 13%;
+    background-color: #dfdfdf;
+    opacity: 0.9;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    overflow-x: hidden;
+    padding-top: 8%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.sidebar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+  
+.sidebar li {
+    margin-bottom: 0.5rem;
+}
+  
+.sidebar li a {
+    display: block;
+    color: #333;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 1rem;
+    transition: all 0.2s ease-in-out;
+    font-size: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+  
+.sidebar li a:hover {
+    background-color: #ffffff;
+    border-radius: 3px;
+}
+  
+.content {
+    margin-left: 15%;
+    height: auto; /* Adjust this height based on your content */
+    position: absolute;
+    width: 83%;
+    top: 16%;
+    bottom: 1%;
+    background: #FFFFFF;
+    opacity: 0.9;
+    border-radius: 10px; 
 }
